[package]
name = "hw4"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "secure_classifier"

[dependencies]
libdarknet-sys = {version = "1.0.0", path = "../darknet"}
libseccomp = "0.3.0"
nix = { version = "0.28.0", features = ["sched", "hostname", "fs", "mount", "user", "process"] }